# rust-sudoku

./: .gitignore  Cargo.toml  LICENSE.md  README.md  pyproject.toml  sudokutils.pyi
.github/workflows/: build-test.yml  build.yml  lint.yml
src/: constants.rs  generator.rs  lib.rs  main.rs  solver.rs  utils.rs
sudoku/: Cargo.toml
sudoku-python/: Cargo.toml  sudoku_python.pyi
sudoku-python/src/: lib.rs
sudoku/src/: constants.rs  generator.rs  lib.rs  solver.rs  utils.rs
