[project]
name = "sudokutils"
version = "1.1.1-beta.1"
description = "Utilities for working with sudokus"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE.md"}
keywords = ["sudoku", "utilities", "rust"]
authors = [
  {name = "wookie184", email = "wookie1840@gmail.com"}
]
maintainers = [
  {name = "wookie184", email = "wookie1840@gmail.com"}
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]

[project.urls]
Homepage = "https://github.com/wookie184/rust-sudoku"
Repository = "https://github.com/wookie184/rust-sudoku"

[build-system]
requires = ["maturin>=0.14,<0.15"]
build-backend = "maturin"