[package]
name = "sudoku"
version = "1.1.0"
description = "Sudoku solver and generator functions"

license = "MIT"
readme = "README.md"
repository = "https://www.github.com/wookie184/rust-sudoku"
keywords = ["sudoku"]
categories = ["command-line-utilities"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
rand = { version = "0.8" }
